# well-fin-plan

./: .dockerignore  .env.example  .gitignore  AGENTS.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605270001_initial_no_fk.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  reports.py  resources.py  settings.py  transactions.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  finance.py  user.py
backend/app/schemas/: auth.py  finance.py
backend/app/services/: auth_service.py  defaults.py  finance_service.py  report_service.py
backend/scripts/: start.sh
backend/tests/: conftest.py  test_auth.py  test_budget_reports.py  test_finance_api_contract.py  test_user_isolation.py
docs/: 个人资金管理模板_浮动收入版.xlsx
docs/superpowers/plans/: 2026-05-27-personal-finance-mvp.md
docs/superpowers/specs/: 2026-05-27-personal-finance-mvp-design.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.ts
frontend/src/components/: AppShell.vue  CrudTablePage.vue  DataPanel.vue  FinanceChart.vue  MetricCard.vue  PageHeader.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  finance.ts
frontend/src/types/: finance.ts
frontend/src/utils/: format.ts
frontend/src/views/: AssetsView.vue  DashboardView.vue  DebtsView.vue  EmergencyFundView.vue  GoalsView.vue  (+5 more)
