[project]
name = "well-fin-plan-backend"
version = "0.1.0"
description = "FastAPI backend for the Well Finance Plan MVP"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.9.0",
    "pyjwt>=2.10.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
